# banyuhay

./: .dockerignore  .env.example  .gitignore  .infisical.json  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  api.Dockerfile  app.Dockerfile  banyuhay.code-workspace  docker-bake.hcl  docker-compose.yml  mise.toml  prod.Dockerfile
.cursor/: mcp.json
.github/workflows/: build-and-push.yml  build-api.yml  build-app.yml
api/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.dev.sh  prod.Dockerfile  pyproject.toml  settings.py
api/api/: api.py  auth.py  db.py  settings.py
api/api/fixtures/: reviews.yml  toilets.yml
api/api/middlewares/: staticfiles.py
api/api/models/: toilet.py
api/api/routes/: auth.py  reviews.py  toilets.py
api/api/schemas/: __init__.py  base.py  review.py  toilet.py
api/app/: api.py  app.py  auth.py  db.py  settings.py
api/app/db/: queriers.py  utils.py
api/app/db/migrations/: env.py  script.py.mako
api/app/db/migrations/versions/: 2024_10_05_2151-52fdea2767d8_init.down.sql  2024_10_05_2151-52fdea2767d8_init.py  2024_10_05_2151-52fdea2767d8_init.up.sql  2025_04_23_1746-5808855e1333_add_user_model.down.sql  2025_04_23_1746-5808855e1333_add_user_model.py  2025_04_23_1746-5808855e1333_add_user_model.up.sql  2026_03_22_1200-b4c8e2a91d3f_fix_toilet_geometry_wgs84_order.down.sql  2026_03_22_1200-b4c8e2a91d3f_fix_toilet_geometry_wgs84_order.py  2026_03_22_1200-b4c8e2a91d3f_fix_toilet_geometry_wgs84_order.up.sql
api/app/db/queries/: reviews.sql  toilets.sql  users.sql
api/app/fixtures/: seed-data.sql  toilets.yml
api/app/middlewares/: staticfiles.py
api/app/models/: __init__.py  base.py  toilet.py
api/app/routes/: auth.py  reviews.py  toilets.py
api/app/schemas/: __init__.py  auth.py  review.py  toilet.py
api/fixtures/: reviews.yml
api/migrations/: env.py
api/migrations/versions/: 2024_10_05_2151-52fdea2767d8_init.py
api/scripts/: load_fixtures.py
infra/helm/: helmfile.yaml
infra/helm/banyuhay/: Chart.yaml  values.yaml
infra/helm/banyuhay/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-app.yaml  deployment.yaml  hpa.yaml  ingress.yaml  initjobs.yaml  pdb.yaml  secret.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
infra/helm/banyuhay/templates/tests/: test-connection.yaml
infra/terraform/: .terraform.lock.hcl  backend.tf  main.tf
initdb/: 00-init.sql
pipelines/: .env.example  dagster.yaml  pyproject.toml  workspace.yaml
pipelines/notebooks/: scratch.ipynb
pipelines/pipelines/: definitions.py  settings.py  utils.py
pipelines/pipelines/assets/: assets.py
pipelines/pipelines/jobs/: __init__.py
ui/: .cta.json  .env.example  .eslint.config.js  .eslintignore  .eslintrc.cjs  .prettierrc.js  biome.json  bun.lockb  components.json  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui-next/: .cta.json  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
ui-next/src/: env.ts  main.tsx  styles.css
ui-next/src/components/: header.tsx  info-panel.tsx
ui-next/src/routes/: __root.tsx  index.tsx
ui-start/: .cta.json  biome.json  package.json
ui-start/src/: env.ts  routeTree.gen.ts  styles.css
ui-start/src/components/: Header.tsx  login-user-header.tsx
ui-start/src/integrations/tanstack-query/: root-provider.tsx
ui-start/src/lib/api/: index.ts
ui-start/src/routes/: __root.tsx  _app.tsx  index.tsx
ui-start/src/routes/_app/: $toiletId.tsx
ui/src/: app.css  app.html  env.ts  global.d.ts  index.css  main.tsx  routeTree.gen.ts  router.tsx  styles.css  vite-env.d.ts
ui/src/api/: index.ts  reviews.ts  toilets.ts
ui/src/components/: login-user-header.tsx  main-card.tsx  map-state-updater.ts  markers.tsx  reviews-container.tsx  reviews.tsx  toilet-detail.tsx
ui/src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  map.tsx
ui/src/lib/: api.ts  auth.ts  constants.ts  types.ts  utils.ts
ui/src/lib/api/: generated.d.ts  index.ts
ui/src/lib/components/: LoginUserHeader.svelte  MainCard.svelte  Markers.svelte  Reviews.svelte
ui/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
ui/src/lib/components/ui/button/: button.svelte  index.ts
ui/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
ui/src/lib/components/ui/collapsible/: collapsible-content.svelte  index.ts
ui/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-group.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-separator.svelte  dropdown-menu-shortcut.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
ui/src/lib/components/ui/skeleton/: skeleton.svelte
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  __root.tsx  api.health.ts  index.lazy.tsx  index.tsx  rpc.$.ts
ui/src/routes/[toiletId]/: +page.svelte  +page.ts
ui/src/routes/_app/: index.tsx
ui/src/routes/api/: rpc.$.ts
