[tool.poetry]
name = "banyuhay"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
fastapi = { extras = ["standard"], version = "^0.115.6" }
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pydantic = "~2.7.4"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
geoalchemy2 = "^0.15.2"
shapely = "^2.0.6"
loguru = "^0.7.2"
orjson = "^3.10.7"
itsdangerous = "^2.2.0"
stytch = "^11.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
