[project]
name = "banyuhay"
version = "0.2.0"
description = ""
readme = "../README.md"
requires-python = "~=3.13.0"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "geoalchemy2>=0.17.1",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "orjson>=3.10.16",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "shapely>=2.1.0",
    "sqlalchemy>=2.0.40",
    "stytch>=13.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
